Aplicando estilo version 3.0 responsivo

--- a/index.html
+++ b/index.html
@@ -41,18 +41,21 @@
           </a>
 
           <nav class="navegacion">
-            <a href="#" class="navegacion_enlace">Nosotros</a>
-            <a href="#" class="navegacion_enlace">Peinados</a>
-            <a href="#" class="navegacion_enlace">Contacto</a>
+            <a href="#" class="navegacion_enlace">servicios</a>
+            <a href="#" class="navegacion_enlace">Sobre Nosotros</a>
+            <a href="#" class="navegacion_enlace">Contactos</a>
+            <a href="#" class="navegacion_enlace">cita</a>
           </nav>
         </div>
       </div>
 
       <div class="header__texto">
-        <h1 class="no_margin">Elegancia y Estilo</h1>
-        <p class="no-margin">
-          Variados estilos, los mejor de la tendencia en moda
-        </p>
+        <div>
+          <h1 class="no_margin">
+            Una experiencia de barbería fluida en tu ciudad
+          </h1>
+          <p class="no-margin minuscula">desde 1999</p>
+        </div>
       </div>
     </header>
 
@@ -64,7 +67,7 @@
             <p class="centrar-texto principal-parrrafo">
               Ubicada en el corazón de la ciudad, la
               <strong>Barber Shop</strong> trae para el mercado lo que hay de
-              mejor para su cabello y barba. Fundada en 2020, la Barber Shop ya
+              mejor para su cabello y barba. Fundada en 1999, la Barber Shop ya
               es destaque en la ciudad y conquista nuevos clientes diariamente.
             </p>
             <p class="centrar-texto principal-parrrafo">
@@ -82,9 +85,15 @@
             </p>
           </article>
           <article class="entrada2">
-            <img class="imagen" src="img/barberia_1_1.jpg" alt="" />
-            <img class="imagen" src="img/barberia_1_2.jpg" alt="" />
-            <img class="imagen" src="img/barberia_1_3.jpg" alt="" />
+            <div class="imagen">
+              <img class="imagen1" src="img/barberia_1_1.jpg" alt="" />
+            </div>
+            <div class="imagen">
+              <img class="imagen2" src="img/barberia_1_2.jpg" alt="" />
+            </div>
+            <div class="imagen">
+              <img class="imagen3" src="img/barberia_1_3.jpg" alt="" />
+            </div>
           </article>
         </div>
       </main>
@@ -128,7 +137,9 @@
         </div>
       </div>
 
-      <p class="copyright">Todos los derechos Reservados @jorgeDevmm - 2022</p>
+      <p class="copyright">
+        ©️2023 Barber Shop - Todos los derechos Reservados Jorge L. Monzón
+      </p>
     </footer>
   </body>
 </html>
